k8s/base/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 5  # Retain 5 revisions for rollback
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: user-service
        image: ghcr.io/nus-iss-projects/bit-scout-user-service/bit-scout-user-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
        volumeMounts:
        - name: google-services-volume
          mountPath: /app/app/google-services.json
          subPath: google-services-user.json  # Mounts google-services.json
        readinessProbe:
          httpGet:
            path: /account/health
            port: 8081
          initialDelaySeconds: 150
          periodSeconds: 30
          failureThreshold: 20  # Number of failures before restarting the container
        livenessProbe:
          httpGet:
            path: /account/health
            port: 8081
          initialDelaySeconds: 150
          periodSeconds: 30
          failureThreshold: 20  # Number of failures before restarting the container
      volumes:
      - name: google-services-volume
        secret:
          secretName: firebase-config-user  # Firebase credentials secret
