k8s/base/coin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coin-service
spec:
  type: ClusterIP  # Internal access only, load-balanced by Ingress
  selector:
    app: coin-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
