k8s/base/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  ports:
  - port: 9092
    name: kafka
  clusterIP: None  # Headless service for direct communication between brokers
  selector:
    app: kafka
