k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "crypto-ingress-ip"
    spec.ingressClassName: "gce"
spec:
  # ingressClassName: "gce"
  rules:
    - http:
        paths:
        - path: /api/watchlist/
          pathType: Prefix
          backend:
            service:
              name: watchlist-service
              port:
                number: 80
        - path: /api/v1/notifications/
          pathType: Prefix
          backend:
            service:
              name: notification-service
              port:
                number: 80
        - path: /notifications  # Specific path for WebSocket connections
          pathType: Prefix
          backend:
            service:
              name: notification-service
              port:
                number: 80
        - path: /account/
          pathType: Prefix
          backend:
            service:
              name: user-service
              port:
                number: 80
        - path: /api/v1/coin/
          pathType: Prefix
          backend:
            service:
              name: coin-service
              port:
                number: 80
        - path: /coin  # Specific path for WebSocket connections
          pathType: Prefix
          backend:
            service:
              name: coin-service
              port:
                number: 80
